# iztro-rs

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  README.md  README.zh-CN.md  release-plz.toml
crates/iztro/: CHANGELOG.md  Cargo.toml
crates/iztro-cli/: Cargo.toml
crates/iztro-cli/src/: main.rs
crates/iztro-core/: Cargo.toml
crates/iztro-core/src/: adjective_stars.rs  builder.rs  bureau.rs  calendar.rs  chart.rs  decadal_mutagen.rs  error.rs  facade.rs  ganzhi.rs  horoscope.rs  lib.rs  life_body.rs  major_stars.rs  minor_stars.rs  mutagen.rs  natal.rs  palace.rs  palace_stems.rs  profile.rs  sexagenary.rs  star.rs  yearly_mutagen.rs
crates/iztro-core/src/calendar/: lunar_normalize.rs  mod.rs  solar_to_lunar.rs
crates/iztro-core/src/calendar/lunar_normalize/: tests.rs
crates/iztro-core/src/facade/: by_lunar.rs  by_solar.rs  mod.rs
crates/iztro-core/src/model/: bureau.rs  calendar.rs  mod.rs  sexagenary.rs
crates/iztro-core/src/model/chart/: chart.rs  decadal.rs  horoscope.rs  mod.rs  snapshot.rs
crates/iztro-core/src/model/star/: flow.rs  kind.rs  metadata.rs  mod.rs  mutagen.rs  name.rs
crates/iztro-core/src/placement/: location.rs  mod.rs
crates/iztro-core/src/placement/natal/: adjective.rs  decorative.rs  input.rs  life_body.rs  (+6 more)
crates/iztro-core/tests/: adjective_stars.rs  bureau.rs  chart_stack_snapshot.rs  decadal_frame.rs  decadal_horoscope.rs  decadal_mutagen.rs  decorative_runtime_stars.rs  e2e_supported_by_lunar.rs  e2e_supported_by_solar.rs  facade.rs  flow_star_placements.rs  horoscope.rs  iztro_compatibility.rs  leap_month_by_lunar.rs  life_body.rs  major_stars.rs  minor_stars.rs  natal.rs  nayin.rs  palace_stems.rs  scaffold.rs  sexagenary.rs  star_inventory.rs  time_index_rat_hour.rs  yearly_mutagen.rs  zhongzhou_adjective_stars.rs
crates/iztro-core/tests/common/: mod.rs
crates/iztro-features/: Cargo.toml
crates/iztro-features/src/: basic.rs  domains.rs  extractor.rs  lib.rs  mutagen_flows.rs  palace_features.rs  relations.rs  star_features.rs
crates/iztro-features/tests/: basic_feature_extractor.rs  palace_relations.rs  scaffold.rs
crates/iztro-gui/: Cargo.toml
crates/iztro-gui/assets/fonts/: NOTICE.md
crates/iztro-gui/src/: analysis.rs  app.rs  fonts.rs  lib.rs  main.rs  persistence.rs  settings.rs  static_chart_screen.rs  system_clock.rs
crates/iztro-gui/src/static_chart_screen/: chart.rs  inspector.rs  labels.rs  lines.rs  mod.rs  palace.rs  startup.rs  style.rs  temporal.rs  tests.rs  theme.rs
crates/iztro-gui/tests/: app_theme.rs  birth_input_modes.rs  locale.rs  static_chart_view.rs
crates/iztro-i18n/: Cargo.toml
crates/iztro-i18n/locales/en-US/: chart.ftl  claims.ftl  stars.ftl  temporal.ftl  ui.ftl
crates/iztro-i18n/locales/zh-Hans/: chart.ftl  claims.ftl  stars.ftl  temporal.ftl  ui.ftl
crates/iztro-i18n/src/: keys.rs  lib.rs  locale.rs  localizer.rs  star_table.rs
crates/iztro-i18n/tests/: locale.rs  localizer.rs  source_labels.rs
crates/iztro-reading/: Cargo.toml
crates/iztro-reading/src/: lib.rs  renderer.rs  report.rs  section.rs
crates/iztro-reading/tests/: scaffold.rs
crates/iztro-render/: Cargo.toml
crates/iztro-render/examples/: plain_text.rs
crates/iztro-render/src/: lib.rs  text.rs
crates/iztro-render/tests/: plain_text.rs
crates/iztro-rules/: Cargo.toml
crates/iztro-rules/src/: claim.rs  condition.rs  effect.rs  engine.rs  loader.rs  rule.rs
crates/iztro-rules/tests/: scaffold.rs
crates/iztro/examples/: plain_text.rs
crates/iztro/fixtures/iztro/: CASES.json  MANIFEST.json  README.md  calculation_config.json  horoscope.json  horoscope_facade.json  horoscope_runtime.json  major_stars_1990_05_17_chen_female.json  minimal_natal_1990_05_17_chen_female.json  minor_stars_1990_05_17_chen_female.json  minor_stars_1991_08_09_hai_female.json  runtime_decorative_default_1991_08_09_hai_female.json  runtime_decorative_zhongzhou_1990_05_17_chen_female.json  static_chart_view_1990_05_17_chen_female.json  time_index_rat_hour.json  zhongzhou_adjective_stars_1988_03_14_zi_male.json  zhongzhou_adjective_stars_1990_05_17_chen_female.json
crates/iztro/rule-corpus/patterns/: rules.toml
crates/iztro/rule-corpus/quan-shu/: rules.toml  sections.toml
crates/iztro/src/: lib.rs
crates/iztro/src/analysis/: detect.rs  layer.rs  mod.rs  selected.rs
crates/iztro/src/core/: error.rs  mod.rs  rule_context.rs
crates/iztro/src/facade/: mod.rs  static_temporal_chart_view.rs
crates/iztro/src/features/: basic.rs  domains.rs  extractor.rs  mod.rs  mutagen_flows.rs  palace_features.rs  palace_stem.rs  relations.rs  star_features.rs
crates/iztro/src/projection/: mod.rs  static_chart.rs
crates/iztro/src/reading/: renderer.rs  report.rs  section.rs
crates/iztro/src/render/: mod.rs  text.rs
crates/iztro/src/rules/: claim.rs  effect.rs  engine.rs  loader.rs  mod.rs  query.rs  relation.rs  rule.rs  source.rs
crates/iztro/tests/: adjective_stars.rs  age_horoscope.rs  analysis_layer.rs  analysis_selected.rs  basic_feature_extractor.rs  boundary_calculation_policy.rs  bureau.rs  by_lunar_chart_plane.rs  by_solar_chart_plane.rs  calculation_config.rs  calculation_diagnostics.rs  chart_profile.rs  chart_stack_snapshot.rs  chinese_date_labels.rs  classical_rule_guardrails.rs  classical_rule_panel_view.rs  classical_rules.rs  classical_source_coverage.rs  classical_source_inventory.rs  clock_time_calculation_policy.rs  clock_time_options.rs  compat_adjective_stars.rs  compat_decorative_runtime_stars.rs  compat_flow_star_placements.rs  compat_major_stars.rs  compat_minimal_natal.rs  compat_minor_stars.rs  compat_zhongzhou_adjective_stars.rs  daily_horoscope.rs  decadal_frame.rs  decadal_horoscope.rs  decadal_mutagen.rs  decorative_runtime_stars.rs  e2e_supported_by_lunar.rs  e2e_supported_by_solar.rs  effective_chart_state.rs  facade.rs  facade_star_ordering.rs  features_scaffold.rs  fixture_case_registry.rs  (+45 more)
crates/iztro/tests/common/: builders.rs  cases.rs  fixtures.rs  mod.rs  normalize.rs  targets.rs
crates/iztro/tests/support/: classical_source.rs  mod.rs
(+319 files in other folders)
