[workspace]
members = [
    "crates/iztro",
    "crates/iztro-cli",
]
resolver = "3"

[workspace.package]
authors = ["Jinyang Wang"]
edition = "2024"
license = "MIT"
repository = "https://github.com/JinyangWang27/iztro-rs"
rust-version = "1.85"
version = "0.3.2"

[workspace.dependencies]
anyhow = "1"
lunar-lite = "1.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
