[workspace]
members = [
    "crates/iztro",
    "crates/iztro-cli",
    "crates/iztro-gui",
    "crates/iztro-i18n",
]
resolver = "3"

[workspace.package]
authors = ["Jinyang Wang"]
edition = "2024"
license = "MIT"
repository = "https://github.com/JinyangWang27/iztro-rs"
rust-version = "1.85"
version = "0.10.0"

[workspace.dependencies]
anyhow = "1"
fluent-bundle = "0.15"
lunar-lite = "1.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
unic-langid = "0.9"
