[package]
name = "iztro-core"
description = "Core chart facts and strongly typed Zi Wei Dou Shu domain models."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
icu_calendar.workspace = true
lunar-lite.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
