[package]
name = "iztro-features"
description = "Feature extraction contracts for iztro-rs charts."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
iztro-core = { path = "../iztro-core" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
