[package]
name = "iztro-gui"
description = "Local Iced desktop GUI prototype for rendering an iztro static chart snapshot."
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
iztro = { path = "../iztro" }
iced = "0.13"

[lib]
name = "iztro_gui"
path = "src/lib.rs"

[[bin]]
name = "iztro-gui"
path = "src/main.rs"
