[package]
name = "iztro-gui"
description = "Local Iced desktop GUI prototype for rendering an iztro static chart snapshot."
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
iztro = { path = "../iztro" }
# WSL uses XWayland at process startup, avoiding wgpu's unstable WSLg Wayland path.
iced = { version = "0.13", default-features = false, features = ["wgpu"] }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "5"

[dev-dependencies]
tempfile = "3"

[lib]
name = "iztro_gui"
path = "src/lib.rs"

[[bin]]
name = "iztro-gui"
path = "src/main.rs"
