[package]
name = "iztro-gui"
description = "Local Iced desktop GUI prototype for rendering an iztro static chart snapshot."
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
iztro = { path = "../iztro" }
iztro-i18n = { path = "../iztro-i18n" }
# WSL uses XWayland at process startup, avoiding wgpu's unstable WSLg Wayland path.
# `canvas` powers the transparent 三方四正 connecting-line overlay.
iced = { version = "0.13", default-features = false, features = ["wgpu", "canvas"] }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"

[lib]
name = "iztro_gui"
path = "src/lib.rs"

[[bin]]
name = "iztro-gui"
path = "src/main.rs"
