[package]
name = "iztro-reading"
description = "Deterministic report structures and rendering contracts for iztro-rs."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
iztro-features = { path = "../iztro-features" }
iztro-rules = { path = "../iztro-rules" }
serde.workspace = true
thiserror.workspace = true
