[package]
name = "iztro-reading"
description = "Deterministic report structures and rendering contracts for iztro-rs."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
iztro-features.workspace = true
iztro-rules.workspace = true
serde.workspace = true
thiserror.workspace = true
