[package]
name = "iztro-render"
description = "Lightweight deterministic renderers for iztro-rs chart snapshots."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
iztro-core.workspace = true

[dev-dependencies]
serde_json.workspace = true
