[package]
name = "iztro-rules"
description = "Structured rule and claim contracts for iztro-rs."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
iztro-features.workspace = true
serde.workspace = true
thiserror.workspace = true
