[package]
name = "iztro"
description = "Strongly typed Zi Wei Dou Shu chart generation aligned with iztro."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
readme = "../../README.md"
exclude = [
    "fixtures/**",
    "tests/**"
]


[dependencies]
lunar-lite = { workspace = true, features = ["serde"] }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
