[package]
name = "iztro"
description = "Strongly typed Zi Wei Dou Shu chart generation aligned with iztro."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
readme = "../../README.md"
exclude = [
    "fixtures/**",
    "tests/**"
]


[dependencies]
serde.workspace = true
thiserror.workspace = true
tyme4rs = "=1.5.0"

[dev-dependencies]
serde_json.workspace = true
tyme4rs = "=1.5.0"
